fix the li content so the align-self will work

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
 body {
     font-size: 15px;
     font-family: League Spartan;
+    max-width: 100%;
 }
 
 main {
@@ -42,7 +43,21 @@ color:hsl(303, 10%, 53%);
 }
 
 .star-reviews {
-display: flex;
+    display: flex;
+        height: 12rem;
+        gap: 1rem;
+}
+
+.start-reviews {
+    align-self: start;
+}
+
+.stars-reports {
+    align-self: center;
+}
+
+.starts-besttech {
+    align-self: 🔚 ;
 }
 
 .reviews {
